edit: service 라벨 수정

--- a/base/service.yaml
+++ b/base/service.yaml
@@ -6,7 +6,7 @@ metadata:
     app: argocd-nextjs-service
 spec:
   selector:
-    app: argocd-nextjs-deployment
+    app: argocd-nextjs
   ports:
     - protocol: TCP
       port: 80
